Changed workflow probabilities